iptables/etc/rules.v4
# Generated by xtables-save v1.8.2 on Wed Jun  2 01:10:26 2021
*filter
:INPUT ACCEPT [1515262:1315004067]
:FORWARD ACCEPT [2783:278255]
:OUTPUT ACCEPT [1092745:69420362]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o br-2409a0d575ca -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-2409a0d575ca -j DOCKER
-A FORWARD -i br-2409a0d575ca ! -o br-2409a0d575ca -j ACCEPT
-A FORWARD -i br-2409a0d575ca -o br-2409a0d575ca -j ACCEPT
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -i eth1 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o eth1 -j ACCEPT
-A DOCKER -d 172.20.0.2/32 ! -i br-2409a0d575ca -o br-2409a0d575ca -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i br-2409a0d575ca ! -o br-2409a0d575ca -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o br-2409a0d575ca -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Wed Jun  2 01:10:26 2021
# Generated by xtables-save v1.8.2 on Wed Jun  2 01:10:26 2021
*nat
:PREROUTING ACCEPT [10882:2357642]
:INPUT ACCEPT [8236:2086941]
:POSTROUTING ACCEPT [248:18081]
:OUTPUT ACCEPT [2889:272473]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A PREROUTING -p tcp -m tcp --dport 3389 -j DNAT --to-destination 192.168.1.60:3389
-A POSTROUTING -s 172.20.0.0/16 ! -o br-2409a0d575ca -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -o eth0 -j MASQUERADE
-A POSTROUTING -j MASQUERADE
-A POSTROUTING -s 172.20.0.2/32 -d 172.20.0.2/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A DOCKER -i br-2409a0d575ca -j RETURN
-A DOCKER -i docker0 -j RETURN
-A DOCKER ! -i br-2409a0d575ca -p tcp -m tcp --dport 8080 -j DNAT --to-destination 172.20.0.2:8080
COMMIT
# Completed on Wed Jun  2 01:10:26 2021
